feat: 로또 번호 예외 처리